// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupAvatar renders an outline 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "boxShadow": "0 0 0 2px #fff",
      "height": 40,
      "width": 40,
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": 0,
        "top": 0,
        "width": "calc(50% - 1px)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": "calc(50% + 1px)",
        "top": 0,
        "width": "calc(50% - 1px)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`GroupAvatar renders avatars for 0 people 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "height": 40,
      "width": 40,
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": 0,
        "top": 0,
        "width": 40,
      }
    }
  >
    <div
      aria-label=""
      className="box grayBg itemsCenter justifyCenter xsDisplayFlex"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="-50 -50 100 100"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          
        </title>
        <text
          className="antialiased sansSerif leadingSmall fontWeightBold"
          dominantBaseline="central"
          fill="#fff"
          fontSize="50px"
          textAnchor="middle"
        >
          
        </text>
      </svg>
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`GroupAvatar renders avatars for 1 person 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "height": 40,
      "width": 40,
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": 0,
        "top": 0,
        "width": 40,
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`GroupAvatar renders avatars for 2 people 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "height": 40,
      "width": 40,
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": 0,
        "top": 0,
        "width": "calc(50% - 1px)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": "calc(50% + 1px)",
        "top": 0,
        "width": "calc(50% - 1px)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`GroupAvatar renders avatars for 3 people 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "height": 40,
      "width": 40,
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": 0,
        "top": 0,
        "width": "calc(50% - 1px)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
  <div
    className="absolute box"
    style={
      Object {
        "height": "calc(50% - 1px)",
        "left": "calc(50% + 1px)",
        "top": 0,
        "width": "calc(50%)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
  <div
    className="absolute box"
    style={
      Object {
        "height": "calc(50% - 1px)",
        "left": "calc(50% + 1px)",
        "top": "calc(50% + 1px)",
        "width": "calc(50%)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`GroupAvatar renders avatars for more than 3 AVATAR_SIZES 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "height": 40,
      "width": 40,
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": 0,
        "top": 0,
        "width": "calc(50% - 1px)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
  <div
    className="absolute box"
    style={
      Object {
        "height": "calc(50% - 1px)",
        "left": "calc(50% + 1px)",
        "top": 0,
        "width": "calc(50%)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
  <div
    className="absolute box"
    style={
      Object {
        "height": "calc(50% - 1px)",
        "left": "calc(50% + 1px)",
        "top": "calc(50% + 1px)",
        "width": "calc(50%)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`GroupAvatar renders multi-byte character initials 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "height": 40,
      "width": 40,
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": 0,
        "top": 0,
        "width": 40,
      }
    }
  >
    <div
      aria-label="💩 astral"
      className="box grayBg itemsCenter justifyCenter xsDisplayFlex"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="-50 -50 100 100"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          💩 astral
        </title>
        <text
          className="antialiased sansSerif leadingSmall fontWeightBold"
          dominantBaseline="central"
          fill="#fff"
          fontSize="50px"
          textAnchor="middle"
        >
          💩
        </text>
      </svg>
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`GroupAvatar renders single-byte character initials for 1 person 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "height": 40,
      "width": 40,
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": 0,
        "top": 0,
        "width": 40,
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="box grayBg itemsCenter justifyCenter xsDisplayFlex"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="-50 -50 100 100"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Jane Smith
        </title>
        <text
          className="antialiased sansSerif leadingSmall fontWeightBold"
          dominantBaseline="central"
          fill="#fff"
          fontSize="50px"
          textAnchor="middle"
        >
          J
        </text>
      </svg>
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`GroupAvatar renders single-byte character initials for 3 people 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "height": 40,
      "width": 40,
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": 40,
        "left": 0,
        "top": 0,
        "width": "calc(50% - 1px)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="box grayBg itemsCenter justifyCenter xsDisplayFlex"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="-50 -50 100 100"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Jane Smith
        </title>
        <text
          className="antialiased sansSerif leadingSmall fontWeightBold"
          dominantBaseline="central"
          fill="#fff"
          fontSize="50px"
          textAnchor="middle"
        >
          J
        </text>
      </svg>
    </div>
    <div
      className="wash"
    />
  </div>
  <div
    className="absolute box"
    style={
      Object {
        "height": "calc(50% - 1px)",
        "left": "calc(50% + 1px)",
        "top": 0,
        "width": "calc(50%)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="box grayBg itemsStart xsDisplayFlex"
      style={
        Object {
          "height": "100%",
          "paddingRight": "calc(0.7071067811865475 * (calc(50% - 1px)) / 2)",
          "paddingTop": "calc(0.7071067811865475 * (calc(50% - 1px)) / 2)",
        }
      }
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="-50 -50 100 100"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Jane Smith
        </title>
        <text
          className="antialiased sansSerif leadingSmall fontWeightBold"
          dominantBaseline="central"
          fill="#fff"
          fontSize="50px"
          textAnchor="middle"
        >
          J
        </text>
      </svg>
    </div>
    <div
      className="wash"
    />
  </div>
  <div
    className="absolute box"
    style={
      Object {
        "height": "calc(50% - 1px)",
        "left": "calc(50% + 1px)",
        "top": "calc(50% + 1px)",
        "width": "calc(50%)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="box grayBg itemsEnd xsDisplayFlex"
      style={
        Object {
          "height": "100%",
          "paddingBottom": "calc(0.7071067811865475 * (calc(50% - 1px)) / 2)",
          "paddingRight": "calc(0.7071067811865475 * (calc(50% - 1px)) / 2)",
        }
      }
    >
      <svg
        preserveAspectRatio="xMidYMid meet"
        version="1.1"
        viewBox="-50 -50 100 100"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Jane Smith
        </title>
        <text
          className="antialiased sansSerif leadingSmall fontWeightBold"
          dominantBaseline="central"
          fill="#fff"
          fontSize="50px"
          textAnchor="middle"
        >
          J
        </text>
      </svg>
    </div>
    <div
      className="wash"
    />
  </div>
</div>
`;

exports[`GroupAvatar renders with container-based sizing 1`] = `
<div
  className="box circle overflowHidden relative whiteBg"
  style={
    Object {
      "height": "",
      "width": "100%",
      "willChange": "transform",
    }
  }
>
  <div
    className="box"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  />
  <div
    className="absolute box"
    style={
      Object {
        "height": "100%",
        "left": 0,
        "top": 0,
        "width": "calc(50% - 1px)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
  <div
    className="absolute box"
    style={
      Object {
        "height": "100%",
        "left": "calc(50% + 1px)",
        "top": 0,
        "width": "calc(50% - 1px)",
      }
    }
  >
    <div
      aria-label="Jane Smith"
      className="cover"
      role="img"
      style={
        Object {
          "backgroundColor": "#EFEFEF",
          "backgroundImage": "url('foo.png')",
        }
      }
    />
    <div
      className="wash"
    />
  </div>
</div>
`;
